<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#242424"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/ukzn_online_store"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            android:src="@drawable/app_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/logo"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:src="@drawable/app_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.8"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.1"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <EditText
                android:id="@+id/USERNAME"
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:autofillHints="Username"
                android:background="@drawable/edit_txt_1"
                android:fontFamily="sans-serif"
                android:hint="@string/username"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:textColor="#ffffff"
                android:textColorHint="#808080" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:paddingVertical="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <EditText
                android:id="@+id/PASSWORD"
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:autofillHints="password"
                android:background="@drawable/edit_txt_1"
                android:fontFamily="sans-serif"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:textColor="#ffffff"
                android:textColorHint="#808080" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center">

        <ImageButton
            android:id="@+id/LoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button"
            android:contentDescription="@string/login_btn"
            android:fontFamily="sans-serif"
            android:text="@string/login" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:paddingLeft="120dp"
            android:paddingTop="3dp"
            android:paddingRight="120dp"
            android:paddingBottom="3dp">

            <ImageButton
                android:id="@+id/forgotPasswordButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/forgot_password_button"
                android:contentDescription="forgot password" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:paddingLeft="120dp"
            android:paddingTop="3dp"
            android:paddingRight="120dp"
            android:paddingBottom="3dp">

            <ImageButton
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/sign_up_button"></ImageButton>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>