<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/feedLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <ImageView
                    android:id="@+id/feedAuthorIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_gravity="center"
                    android:src="@drawable/ic_person"
                    app:tint="@android:color/darker_gray"
                    android:contentDescription="@string/feed_author" />

                <TextView
                    android:id="@+id/feedTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/default_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />
                <RatingBar
                    android:id="@+id/feedRatingBar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:progressTint="@color/primaryColor" />
            </LinearLayout>

            <TextView
                android:id="@+id/feedBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="3sp"
                android:text="@string/default_body"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <LinearLayout
                android:id="@+id/dateLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">
                <TextView
                    android:id="@+id/feedDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_date"
                    android:textAlignment="textEnd"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="bold|italic" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>